Terminados Home & Navbar

--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,4 @@
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
+@import url('https://fonts.googleapis.com/css2?family=Barlow+Condensed:wght@400;700&family=Barlow:wght@400;600;700&family=Bellefair&display=swap');
 
 *,
 ::after,
@@ -9,3 +7,10 @@
   box-sizing: border-box;
 }
 
+body {
+  font-family: 'Barlow', sans-serif;
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
